fix(style): fix overflow on desc and title
ref #310

--- a/apps/mull-ui/src/app/pages/event-page/event-page-header/event-page-header.scss
+++ b/apps/mull-ui/src/app/pages/event-page/event-page-header/event-page-header.scss
@@ -5,10 +5,11 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-.title {
+.event-page-title {
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 0.5rem;
+  word-break: break-word;
 }
 
 .event-image {
